[package]
name = "image-repair"
version = "0.1.0"
authors = ["Sanford Pun <punsanford@gmail.com>"]
edition = "2018"
exclude = [
    "/app/", "/dev/", "/pkg/",
]

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bit-vec = "0.6"
cfg-if = "0.1"
console_log = { version = "0.2", features = ["color"] }
hungarian = "1.1.1"
permutator = "0.4.0"
visioncortex = { path = "../visioncortex" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "console",
  "Document",
  "HtmlElement",
  "HtmlCanvasElement",
  "ImageData",
  "Window",
]